# safe-json-repair

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: py-release.yml
bindings/js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
bindings/js/scripts/: build-wasm.mjs
bindings/js/src/: index.ts  types.ts
bindings/js/test/: baseline.test.ts  corpus.test.ts  differential.test.ts  options.test.ts  robustness.test.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/safe_json_repair/: __init__.py  _safe_json_repair.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_api.py  test_corpus.py
corpus/: cases.json
crates/safe-json-repair/: Cargo.toml  README.md
crates/safe-json-repair-wasm/: Cargo.toml
crates/safe-json-repair-wasm/src/: lib.rs
crates/safe-json-repair/benches/: repair.rs
crates/safe-json-repair/src/: lib.rs  preprocess.rs  tolerant.rs
crates/safe-json-repair/tests/: corpus.rs  differential.rs  options.rs  robustness.rs  tolerant_edge.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: repair.rs
