[package]
name = "safe-json-repair-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.safe-json-repair]
path = "../crates/safe-json-repair"

[[bin]]
name = "repair"
path = "fuzz_targets/repair.rs"
test = false
doc = false
bench = false
